# optimini

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml
examples/: example.ipynb
src/optimini/: __init__.py  _version.py  algorithms.py  converter.py  history.py  internal_problem.py  mark.py  minimize.py  utils.py
tests/: test_optimini.py
